src/test/test_cases/invalid/syntaxErr/forLoop/dooErr.wacc
# do typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int i = 0, i < 8) doo
    println "This is a very silly typo"
  done
end